--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylsheet" href="styles.css" type="text/css">
+  <link rel="stylsheet" href="./styles.css" type="text/css">
   <title>The Problem With US Education</title>
 </head>
 <body>
