--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       <img src="#" alt="Funding Logo">
     </a>
     <ul class="nav-links">
-      <li class="nav-item"><a href="#">Letter to the Reader</a></li>
-      <li class="nav-item"><a href="#">Artifact 1</a></li>
+      <li class="nav-item"><a href="LetterToTheReader.html">Letter to the Reader</a></li>
+      <li class="nav-item"><a href="Artifact1.html">Artifact 1</a></li>
       <li class="nav-item"><a href="#">Artifact 2</a></li>
       <li class="nav-item"><a href="#">Artifact 3</a></li>
       <li class="nav-item"><a href="#">Artifact 4</a></li>
