--- a/LetterToTheReader.html
+++ b/LetterToTheReader.html
@@ -15,10 +15,10 @@
     <ul class="nav-links">
       <li class="nav-item"><a href="LetterToTheReader.html">Letter to the Reader</a></li>
       <li class="nav-item"><a href="Artifact1.html">Artifact 1</a></li>
-      <li class="nav-item"><a href="#">Artifact 2</a></li>
-      <li class="nav-item"><a href="#">Artifact 3</a></li>
-      <li class="nav-item"><a href="#">Artifact 4</a></li>
-      <li class="nav-item"><a href="#">Reflection</a></li>
+      <li class="nav-item"><a href="Artifact2.html">Artifact 2</a></li>
+      <li class="nav-item"><a href="Artifact3.html">Artifact 3</a></li>
+      <li class="nav-item"><a href="Artifact4.html">Artifact 4</a></li>
+      <li class="nav-item"><a href="Reflection.html">Reflection</a></li>
     </ul>
 </nav>
 </body>
