--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <nav class="navbar">
-    <a href="https://google.com" class="logo">
+    <a href="https://kaelm.github.io/MGP" class="logo">
       <img src="#" alt="Funding Logo">
     </a>
     <ul class="nav-links">
