--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <nav class="navbar">
     <a href="https://kaelm.github.io/MGP" class="logo">
-      <img src="#" alt="Funding Logo">
+      <img src="final repetend.tif" alt="Funding Logo">
     </a>
     <ul class="nav-links">
       <li class="nav-item"><a href="LetterToTheReader.html">Letter to the Reader</a></li>
