--- a/LetterToTheReader.html
+++ b/LetterToTheReader.html
@@ -21,5 +21,30 @@
       <li class="nav-item"><a href="Reflection.html">Reflection</a></li>
     </ul>
 </nav>
+  <center><p>A Letter to the Reader</p></center>
+  <p class="tab">
+  Dear reader,
+  </p>
+  <p>
+  My name is Kael Mercer and I am a sophomore in high school. 
+  Many months ago I discovered how public schools were funded, and I must say that I was appalled. 
+  It seemed so bad, that I still wonder to this day whether or not it’s malicious. 
+  So now, I hear you asking: what’s the big issue with school funding? 
+  And, why do you care so much about this issue? 
+  To answer the latter first, I like education and I like learning. 
+  I like school and to see the way that public schooling is funded in the United States makes me sad. 
+  I want equality of opportunity when it pertains to education, and our current system of educational funding isn’t doing that. 
+  What is that system? Well a large percentage of your schools funding comes from local property taxes. 
+  So, if the houses within a district are expensive, the district gets more funding. 
+  Thus, poor neighborhoods, which are often filled with minority groups, have lower school funding. 
+  This lower school funding results in a lesser education. 
+  All of this is because of the income of these children's parents and the houses that they are able to afford. 
+  To me this is despicable. It goes against what I think America should stand for above all else, a bastion of equality. 
+  This isn’t happening. That is why I think that it’s apparent that the way the United States funds public education is unacceptable because it negatively affects poor people and minorities, and it must be changed in order to ensure that everyone has an equal opportunity to access quality education. 
+  <br>
+  Yours truly,
+  <br>
+  Kael Mercer
+  </p>
 </body>
 </html>
