--- a/LetterToTheReader.html
+++ b/LetterToTheReader.html
@@ -22,10 +22,10 @@
     </ul>
 </nav>
   <center><p>A Letter to the Reader</p></center>
-  <p class="tab">
-  Dear reader,
-  </p>
   <p>
+  Dear reader,<br>
+  </p>
+  <p class="tab">
   My name is Kael Mercer and I am a sophomore in high school. 
   Many months ago I discovered how public schools were funded, and I must say that I was appalled. 
   It seemed so bad, that I still wonder to this day whether or not it’s malicious. 
@@ -41,9 +41,9 @@
   All of this is because of the income of these children's parents and the houses that they are able to afford. 
   To me this is despicable. It goes against what I think America should stand for above all else, a bastion of equality. 
   This isn’t happening. That is why I think that it’s apparent that the way the United States funds public education is unacceptable because it negatively affects poor people and minorities, and it must be changed in order to ensure that everyone has an equal opportunity to access quality education. 
-  <br>
+  <br><br>
   Yours truly,
-  <br>
+  <br><br>
   Kael Mercer
   </p>
 </body>
