--- a/LetterToTheReader.html
+++ b/LetterToTheReader.html
@@ -23,9 +23,9 @@
 </nav>
   <center><p>A Letter to the Reader</p></center>
   <p>
-  Dear reader,<br>
+  Dear reader,<br><br>
   </p>
-  <p class="tab">
+  <p class="tab paragraphs">
   My name is Kael Mercer and I am a sophomore in high school. 
   Many months ago I discovered how public schools were funded, and I must say that I was appalled. 
   It seemed so bad, that I still wonder to this day whether or not it’s malicious. 
