--- a/LetterToTheReader.html
+++ b/LetterToTheReader.html
@@ -21,8 +21,8 @@
       <li class="nav-item"><a href="Reflection.html">Reflection</a></li>
     </ul>
 </nav>
-  <center><p>A Letter to the Reader</p></center>
-  <p>
+  <center><p class="spaceabove">A Letter to the Reader</p></center>
+  <p class="paragraphs">
   Dear reader,<br><br>
   </p>
   <p class="tab paragraphs">
