--- a/Artifact1.html
+++ b/Artifact1.html
@@ -21,5 +21,9 @@
       <li class="nav-item"><a href="Reflection.html">Reflection</a></li>
     </ul>
 </nav>
+  <div>
+    <embed src="https://drive.google.com/viewerng/
+viewer?embedded=true&url=https://drive.google.com/file/d/1OvIGs8izF9o03BD5Hi6Zbx2DZgJzhTQ1/view?usp=sharing" width="500" height="375">
+  </div>
 </body>
 </html>
