--- a/Artifact1.html
+++ b/Artifact1.html
@@ -23,7 +23,7 @@
 </nav>
   <div>
     <embed src="https://drive.google.com/viewerng/
-viewer?embedded=true&url=https://drive.google.com/file/d/1OvIGs8izF9o03BD5Hi6Zbx2DZgJzhTQ1/view?usp=sharing" width="500" height="375">
+viewer?embedded=true&url=https://https://drive.google.com/file/d/1OvIGs8izF9o03BD5Hi6Zbx2DZgJzhTQ1/view" width="500" height="375">
   </div>
 </body>
 </html>
