--- a/Artifact1.html
+++ b/Artifact1.html
@@ -22,8 +22,14 @@
     </ul>
 </nav>
   <div>
-    <embed src="https://drive.google.com/viewerng/
-viewer?embedded=true&url=https://drive.google.com/file/d/1OvIGs8izF9o03BD5Hi6Zbx2DZgJzhTQ1/view?usp=sharing/the.pdf" width="500" height="375">
+    <iframe
+  frameborder="0"
+  scrolling="no"
+  width="640"
+  height="480"
+  src="https://drive.google.com/file/d/1OvIGs8izF9o03BD5Hi6Zbx2DZgJzhTQ1/view?usp=sharing"
+>
+</iframe>
   </div>
 </body>
 </html>
