--- a/Artifact1.html
+++ b/Artifact1.html
@@ -27,7 +27,7 @@
   scrolling="no"
   width="640"
   height="480"
-  src="https://drive.google.com/file/d/1OvIGs8izF9o03BD5Hi6Zbx2DZgJzhTQ1/view?usp=sharing"
+  src="https://drive.google.com/file/d/1OvIGs8izF9o03BD5Hi6Zbx2DZgJzhTQ1/preview"
 >
 </iframe>
   </div>
