--- a/Artifact1.html
+++ b/Artifact1.html
@@ -25,8 +25,8 @@
     <iframe
   frameborder="0"
   scrolling="no"
-  width="640"
-  height="480"
+  width="100%"
+  height="100%"
   src="https://drive.google.com/file/d/1OvIGs8izF9o03BD5Hi6Zbx2DZgJzhTQ1/preview"
 >
 </iframe>
