--- a/Artifact1.html
+++ b/Artifact1.html
@@ -26,7 +26,7 @@
   frameborder="0"
   scrolling="no"
   width="100%"
-  height="100%"
+  height="500"
   src="https://drive.google.com/file/d/1OvIGs8izF9o03BD5Hi6Zbx2DZgJzhTQ1/preview"
 >
 </iframe>
