--- a/Artifact1.html
+++ b/Artifact1.html
@@ -22,14 +22,14 @@
     </ul>
 </nav>
   <div>
-    <iframe
+    <center><iframe
   frameborder="0"
   scrolling="no"
-  width="100%"
-  height="500"
+  width="500"
+  height="600"
   src="https://drive.google.com/file/d/1OvIGs8izF9o03BD5Hi6Zbx2DZgJzhTQ1/preview"
 >
-</iframe>
+    </iframe></center>
   </div>
 </body>
 </html>
