--- a/Artifact1.html
+++ b/Artifact1.html
@@ -25,9 +25,9 @@
     <center><iframe
   frameborder="0"
   scrolling="no"
-  width="800"
-  height="700"
-  class="spaceabove"                  
+  width="100%"
+  height="100%"
+                   
   src="https://drive.google.com/file/d/1OvIGs8izF9o03BD5Hi6Zbx2DZgJzhTQ1/preview"
 >
     </iframe></center>
