--- a/Reflection.html
+++ b/Reflection.html
@@ -21,5 +21,28 @@
       <li class="nav-item"><a href="Reflection.html">Reflection</a></li>
     </ul>
 </nav>
+  <center><p class="spaceabove">Reflection</p></center>
+  <br>
+  <p class="tab paragraphs">
+    During the process of writing my multigenre project, 
+    I was mostly surprised at the new stuff I learned.  
+    The problem of education funding is even deeper than I initially thought, being that it affects minorities disproportionately, which leads to a host of other problems for them. 
+    I was also surprised with how good my argumentative essay turned out. 
+    I am really proud of the way I used evidence to support my points thoroughly. 
+    Additionally, throughout this project, I learned how to write in different genres as a way of inquiring into my topic of choice to communicate my knowledge. 
+    I wrote an argumentative essay, an editorial article, an editorial cartoon, and a comic strip. 
+    I feel like I learned how much info to provide in each. 
+    With the essay, I could go very deep into the topic, explaining a ton of information to support my argument. 
+    With the editorial, I provided less information, sticking more to important points. 
+    And with the comic and the editorial cartoon a lot less information was given. 
+    The information I gave was simply for the punchline in the comic and a lot of symbolism for the editorial cartoon. 
+    I think that the strongest parts of my project were my argumentative essay and my editorial article. 
+    Therefore, following that train of thought, I think that my editorial cartoon and comic strip were my weakest parts. 
+    I think this because I am more comfortable with the mediums of an argumentative essay or article then cartoons or comics. 
+    I am not great at art, so I think I can communicate information better with writing than with images. 
+    As a result of this, I think my writings were better. 
+    Finally, I think that I deserve an A on this project. 
+    I put a lot of effort into the research of my topic, I spent hours reading through every source, I took a lot of notes, and I combined this information into a series of pieces that reflect my knowledge and deliver a message to the reader in an effective manner. 
+  </p>
 </body>
 </html>
