--- a/LetterToTheReader.html
+++ b/LetterToTheReader.html
@@ -21,6 +21,7 @@
       <li class="nav-item"><a href="Reflection.html">Reflection</a></li>
     </ul>
 </nav>
+  <center><img src="Repetend.png" alt="Logo"><center>
   <center><p class="spaceabove">A Letter to the Reader</p></center>
   <br>
   <p class="paragraphs">
