--- a/Reflection.html
+++ b/Reflection.html
@@ -21,6 +21,7 @@
       <li class="nav-item"><a href="Reflection.html">Reflection</a></li>
     </ul>
 </nav>
+  <center><img src="Repetend.png" alt="Logo" style="width: 300px; height: 300px;"></center>
   <center><p class="spaceabove">Reflection</p></center>
   <br>
   <p class="tab paragraphs">
