--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <nav class="navbar">
-    <a href="https://kaelm.github.io/MGP" class="logo" style="height: 10px;">
+    <a href="https://kaelm.github.io/MGP" class="logo" style="height: 10px; width: 10px;">
       <img src="finalrepetendcopy.png" alt="Funding Logo">
     </a>
     <ul class="nav-links">
