--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 <nav class="navbar">
-    <a href="https://kaelm.github.io/MGP" class="logo" style="height: 10px; width: 10px;">
-      <img src="finalrepetendcopy.png" alt="Funding Logo">
+    <a href="https://kaelm.github.io/MGP" class="logo">
+      <img src="finalrepetendcopy.png" alt="Funding Logo" style="height: 10px; width: 10px;">
     </a>
     <ul class="nav-links">
       <li class="nav-item"><a href="LetterToTheReader.html">Letter to the Reader</a></li>
