--- a/Artifact1.html
+++ b/Artifact1.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 <nav class="navbar">
-    <a href="https://google.com" class="logo">
-      <img src="#" alt="Funding Logo">
+    <a href="https://kaelm.github.io/MGP" class="logo">
+      <img src="finalrepetendcopy.png" alt="Funding Logo" style="height: 25px; width: 25px;">
     </a>
     <ul class="nav-links">
       <li class="nav-item"><a href="LetterToTheReader.html">Letter to the Reader</a></li>
