--- a/Artifact3.html
+++ b/Artifact3.html
@@ -18,6 +18,7 @@
       <li class="nav-item"><a href="Artifact2.html">Artifact 2</a></li>
       <li class="nav-item"><a href="Artifact3.html">Artifact 3</a></li>
       <li class="nav-item"><a href="Artifact4.html">Artifact 4</a></li>
+      <li class="nav-item"><a href="Bibliography.html">Bibliography</a></li>
       <li class="nav-item"><a href="Reflection.html">Reflection</a></li>
     </ul>
 </nav>
