--- a/Artifact1.html
+++ b/Artifact1.html
@@ -23,6 +23,11 @@
     </ul>
 </nav>
   <div>
+    <p style="font-size: 30px; font-family: Arial;">
+      Argumentative Essay (Expository):
+    </p>
+  </div>
+  <div>
     <center><iframe
   frameborder="0"
   scrolling="no"
