--- a/Artifact1.html
+++ b/Artifact1.html
@@ -23,9 +23,9 @@
     </ul>
 </nav>
   <div>
-    <p style="font-size: 30px; font-family: Arial;">
-      Argumentative Essay (Expository):
-    </p>
+    <center><p style="font-size: 30px; font-family: Arial; margin-top: 20px;">
+      Argumentative Essay (Expository)
+    </p></center>
   </div>
   <div>
     <center><iframe
