--- a/Artifact1.html
+++ b/Artifact1.html
@@ -23,7 +23,7 @@
     </ul>
 </nav>
   <div>
-    <center><p style="font-size: 30px; font-family: Arial; margin-top: 20px;">
+    <center><p style="font-size: 30px; font-family: Arial; margin-top: 30px; font-weight: bold;">
       Argumentative Essay (Expository)
     </p></center>
   </div>
