--- a/Artifact3.html
+++ b/Artifact3.html
@@ -23,11 +23,16 @@
     </ul>
 </nav>
   <div>
+    <center><p style="font-size: 30px; font-family: Arial; margin-top: 30px; font-weight: bold;">
+      Comic Strip (Creative)
+    </p></center>
+  </div>
+  <div>
     <center><iframe
   frameborder="0"
   scrolling="no"
   width="800"
-  height="700"
+  height="600"
   class="spaceabove"    
   src="https://drive.google.com/file/d/1SDrzCjYkDKLO1FSuicWOSuLAogc5I7sc/preview"
 >
