--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
       <li class="nav-item"><a href="Bibliography.html">Bibliography</a></li>
       <li class="nav-item"><a href="Reflection.html">Reflection</a></li>
     </ul>
+    <div>
+      <p style="font-family: Arial; font-weight: bold; font-size: 130px; text-align: justify; text-justify: inter-word;">
+        The Problem With US Education
+      </p>
+      <center><p style="font-family: Arial; font-size: 70px;">
+        Kael Mercer
+        </p></center>
+    </div>
 </nav>
 </body>
 </html>
