--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
       <p style="font-family: Arial; font-weight: bold; font-size: 130px; text-align: justify; text-justify: inter-word;">
         The Problem With US Education
       </p>
-      <center><p style="font-family: Arial; font-size: 70px;">
+      <p style="font-family: Arial; font-size: 70px;">
         Kael Mercer
-        </p></center>
+      </p>
     </div>
 </body>
 </html>
