--- a/index.html
+++ b/index.html
@@ -25,9 +25,11 @@
   <br>
   <br>
   <div>
-      <p style="font-family: Arial; font-weight: bold; font-size: 130px; text-align: justify; text-justify: inter-word;">
-        The Problem With US Education
+      <p style="font-family: Arial; font-weight: bold; font-size: 130px;">
+        The Problem <br>
+        With US Education
       </p>
+      <br>
       <p style="font-family: Arial; font-size: 70px;">
         Kael Mercer
       </p>
