--- a/index.html
+++ b/index.html
@@ -23,14 +23,12 @@
     </ul>
 </nav>
   <br>
-  <br>
   <div>
-      <p style="font-family: Arial; font-weight: bold; font-size: 130px;">
+      <p style="font-family: Arial; font-weight: bold; font-size: 130px; margin-left: 30px;">
         The Problem <br>
         With US Education
       </p>
-      <br>
-      <p style="font-family: Arial; font-size: 70px;">
+      <p style="font-family: Arial; font-size: 70px; margin-left: 30px;">
         Kael Mercer
       </p>
     </div>
