--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
       </p>
       <p style="font-family: Arial; font-size: 70px; margin-left: 30px;">
         Kael Mercer
-        <br>
+      </p>
+      <p style="font-family: Arial; font-size: 50px; margin-left: 30px;">
         Source Code: <a href="https://github.com/KaelM/MGP">Click Here</a>
       </p>
     </div>
