--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         Kael Mercer
       </p>
       <p style="font-family: Arial; font-size: 15px; margin-left: 30px;">
-        Source Code: <a href="https://github.com/KaelM/MGP">Click Here</a>
+        Source Code: <a href="https://github.com/KaelM/MGP" target="_blank">Click Here</a>
       </p>
     </div>
 </body>
