--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <li class="nav-item"><a href="Artifact4.html">Artifact 4</a></li>
       <li class="nav-item"><a href="Bibliography.html">Bibliography</a></li>
       <li class="nav-item"><a href="Reflection.html">Reflection</a></li>
+      <li class="nav-item"><a href="https://github.com/KaelM/MGP" target="_blank" rel="noopener noreferrer">Source Code</a></li>
     </ul>
 </nav>
   <br>
@@ -30,10 +31,6 @@
       </p>
       <p style="font-family: Arial; font-size: 70px; margin-left: 30px;">
         Kael Mercer
-      </p>
-      <p style="font-family: Arial; font-size: 15px; margin-left: 30px;">
-        Source Code: <a href="https://github.com/KaelM/MGP" target="_blank" rel="noopener noreferrer">Click Here</a>
-      </p>
-    </div>
+   </div>
 </body>
 </html>
