--- a/LetterToTheReader.html
+++ b/LetterToTheReader.html
@@ -20,6 +20,7 @@
       <li class="nav-item"><a href="Artifact4.html">Artifact 4</a></li>
       <li class="nav-item"><a href="Bibliography.html">Bibliography</a></li>
       <li class="nav-item"><a href="Reflection.html">Reflection</a></li>
+      <li class="nav-item"><a href="https://github.com/KaelM/MGP" target="_blank" rel="noopener noreferrer">Source Code</a></li>
     </ul>
 </nav>
   <center><img src="Repetend.png" alt="Logo" style="width: 300px; height: 300px;"></center>
