--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     </a>
     <ul class="nav-links">
       <li class="nav-item"><a href="LetterToTheReader.html">Letter to the Reader</a></li>
-      <li class="nav-item"><a href="Artifact1.html">Artifact 1</a></li>
-      <li class="nav-item"><a href="Artifact2.html">Artifact 2</a></li>
-      <li class="nav-item"><a href="Artifact3.html">Artifact 3</a></li>
-      <li class="nav-item"><a href="Artifact4.html">Artifact 4</a></li>
-      <li class="nav-item"><a href="Bibliography.html">Bibliography</a></li>
-      <li class="nav-item"><a href="Reflection.html">Reflection</a></li>
+      <li class="nav-item"><a href="Artifact1">Artifact 1</a></li>
+      <li class="nav-item"><a href="Artifact2">Artifact 2</a></li>
+      <li class="nav-item"><a href="Artifact3">Artifact 3</a></li>
+      <li class="nav-item"><a href="Artifact4">Artifact 4</a></li>
+      <li class="nav-item"><a href="Bibliography">Bibliography</a></li>
+      <li class="nav-item"><a href="Reflection">Reflection</a></li>
       <li class="nav-item"><a href="https://github.com/KaelM/MGP" target="_blank" rel="noopener noreferrer">Source Code</a></li>
     </ul>
 </nav>
