--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <img src="finalrepetendcopy.png" alt="Funding Logo" style="height: 25px; width: 25px;">
     </a>
     <ul class="nav-links">
-      <li class="nav-item"><a href="LetterToTheReader.html">Letter to the Reader</a></li>
+      <li class="nav-item"><a href="LetterToTheReader">Letter to the Reader</a></li>
       <li class="nav-item"><a href="Artifact1">Artifact 1</a></li>
       <li class="nav-item"><a href="Artifact2">Artifact 2</a></li>
       <li class="nav-item"><a href="Artifact3">Artifact 3</a></li>
