--- a/Artifact1.html
+++ b/Artifact1.html
@@ -34,7 +34,7 @@
   scrolling="no"
   width="800"
   height="600"
-  class="spaceabove"    
+  class="spaceabove embed"    
   src="https://drive.google.com/file/d/1z_CKTb9o4MYn1ZnXhQAUbtGmbEH-c0rZ/preview"
 >
     </iframe></center>
