--- a/Artifact2.html
+++ b/Artifact2.html
@@ -34,7 +34,7 @@
   scrolling="no"
   width="800"
   height="600"
-  class="spaceabove"    
+  class="spaceabove embed"    
   src="https://drive.google.com/file/d/139lXY2WCM3HYhUwnLGWRlMFvBOY8C-iy/preview"
 >
     </iframe></center>
