--- a/Artifact3.html
+++ b/Artifact3.html
@@ -34,7 +34,7 @@
   scrolling="no"
   width="800"
   height="600"
-  class="spaceabove"    
+  class="spaceabove embed"    
   src="https://drive.google.com/file/d/1SDrzCjYkDKLO1FSuicWOSuLAogc5I7sc/preview"
 >
     </iframe></center>
