--- a/index.html
+++ b/index.html
@@ -25,12 +25,13 @@
 </nav>
   <br>
   <div>
-      <p style="font-family: Arial; font-weight: bold; font-size: 130px; margin-left: 30px;">
+      <p class="title" style="font-family: Arial; font-weight: bold; font-size: 130px; margin-left: 30px;">
         The Problem <br>
         With US Education
       </p>
-      <p style="font-family: Arial; font-size: 70px; margin-left: 30px;">
+      <p class="name" style="font-family: Arial; font-size: 70px; margin-left: 30px;">
         Kael Mercer
+      </p>
    </div>
 </body>
 </html>
