--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
 </nav>
   <br>
   <div>
-      <p class="title" style="font-family: Arial; font-weight: bold; font-size: 8.125em; margin-left: 30px;">
+      <p class="title" style="font-family: Arial; font-weight: bold; font-size: 130px; margin-left: 30px;">
         The Problem <br>
         With US Education
       </p>
-      <p class="name" style="font-family: Arial; font-size: 4.375em; margin-left: 30px;">
+      <p class="name" style="font-family: Arial; font-size: 70px; margin-left: 30px;">
         Kael Mercer
       </p>
    </div>
