--- a/Bibliography.html
+++ b/Bibliography.html
@@ -34,7 +34,7 @@
   scrolling="no"
   width="800"
   height="600"
-  class="spaceabove"    
+  class="spaceabove embed"    
   src="https://drive.google.com/file/d/13H_kq4adxjlK3fzbLq873TqKqmNbhee_/preview"
 >
     </iframe></center>
