--- a/Bibliography.html
+++ b/Bibliography.html
@@ -25,7 +25,7 @@
 </nav>
   <div>
     <center><p style="font-size: 30px; font-family: Arial; margin-top: 30px; font-weight: bold;">
-      Works Cited
+      Bibliography
     </p></center>
   </div>
   <div>
