--- a/LetterToTheReader.html
+++ b/LetterToTheReader.html
@@ -44,7 +44,7 @@
   This lower school funding results in a lesser education. 
   All of this is because of the income of these children's parents and the houses that they are able to afford. 
   To me this is despicable. It goes against what I think America should stand for above all else, a bastion of equality. 
-  This isn’t happening. That is why I think that it’s apparent that the way the United States funds public education is unacceptable because it negatively affects poor people and minorities, and it must be changed in order to ensure that everyone has an equal opportunity to access quality education. 
+  This isn’t happening. That is why I think that <u> it’s apparent that the way the United States funds public education is unacceptable because it negatively affects poor people and minorities, and it must be changed in order to ensure that everyone has an equal opportunity to access quality education.</u> 
   <br><br>
   Yours truly,
   <br><br>
