--- a/LetterToTheReader.html
+++ b/LetterToTheReader.html
@@ -30,23 +30,20 @@
   Dear reader,<br><br>
   </p>
   <p class="tab paragraphs">
-  My name is Kael Mercer and I am a sophomore in high school. 
-  Many months ago I discovered how public schools were funded, and I must say that I was appalled. 
-  It seemed so bad, that I still wonder to this day whether or not it’s malicious. 
-  So now, I hear you asking: what’s the big issue with school funding? 
-  And, why do you care so much about this issue? 
-  To answer the latter first, I like education and I like learning. 
-  I like school and to see the way that public schooling is funded in the United States makes me sad. 
-  I want equality of opportunity when it pertains to education, and our current system of educational funding isn’t doing that. 
-  What is that system? Well a large percentage of your schools funding comes from local property taxes. 
-  So, if the houses within a district are expensive, the district gets more funding. 
-  Thus, poor neighborhoods, which are often filled with minority groups, have lower school funding. 
-  This lower school funding results in a lesser education. 
-  All of this is because of the income of these children's parents and the houses that they are able to afford. 
-  To me this is despicable. It goes against what I think America should stand for above all else, a bastion of equality. 
-  This isn’t happening. That is why I think that <u> it’s apparent that the way the United States funds public education is unacceptable because it negatively affects poor people and minorities, and it must be changed in order to ensure that everyone has an equal opportunity to access quality education.</u> 
+  Dear reader,
+	My name is Kael Mercer and I am a sophomore in highschool.
+  A few months ago I learned about how public schools were funded in the United States. 
+  I discovered that a large percentage of school funding comes from local property taxes, meaning that richer areas contribute more money to their schools, creating a difference in educational quality between rich and poor people. 
+  I was appalled at this information because I care about education and equality deeply. 
+  I am currently going through the public education system, and to know that some kids don’t have access to a comparable level of education that I do simply because of where they live and how much their parents make saddens me. 
+  So, when I was told to find a topic to research for my multi-genre project, I knew exactly what I was going to choose. 
+  To find information on this topic I went through databases, searching for peer-review articles and studies, as well as some reputable news articles. 
+  Through this research I discovered that this problem was even worse than I thought, because of how this system of funding negatively affects minorities and marginalized groups. 
+  I now understand that my experience with school isn’t necessarily the norm, and that a lot of people, particularly poor and marginalized groups, have access to worse quality education. 
+  I think that addressing this problem through legislation is necessary to make the United States a better place to live and to improve our international rankings when it comes to education (which aren’t particularly good). 
+  In summation,  <u>it’s apparent that the way the United States funds public education is unacceptable because it negatively affects poor people and minorities, and it must be changed in order to ensure that everyone has an equal opportunity to access quality education.</u> 
   <br><br>
-  Yours truly,
+  Sincerely, 
   <br><br>
   Kael Mercer
   </p>
