--- a/Artifact1.html
+++ b/Artifact1.html
@@ -13,11 +13,10 @@
       <img src="finalrepetendcopy.png" alt="Funding Logo" style="height: 25px; width: 25px;">
     </a>
     <ul class="nav-links">
-      <li class="nav-item"><a href="LetterToTheReader">Letter to the Reader</a></li>
-      <li class="nav-item"><a href="Artifact1">Artifact 1</a></li>
-      <li class="nav-item"><a href="Artifact2">Artifact 2</a></li>
-      <li class="nav-item"><a href="Artifact3">Artifact 3</a></li>
-      <li class="nav-item"><a href="Artifact4">Artifact 4</a></li>
+      <li class="nav-item"><a href="Artifact1">Artifact 1: Arguementative Essay</a></li>
+      <li class="nav-item"><a href="Artifact2">Artifact 2: Editorial Article</a></li>
+      <li class="nav-item"><a href="Artifact3">Artifact 3: Comic Strip</a></li>
+      <li class="nav-item"><a href="Artifact4">Artifact 4: Editorial Cartoon</a></li>
       <li class="nav-item"><a href="Bibliography">Bibliography</a></li>
       <li class="nav-item"><a href="Reflection">Reflection</a></li>
       <li class="nav-item"><a href="https://github.com/KaelM/MGP" target="_blank" rel="noopener noreferrer">Source Code</a></li>
