--- a/Artifact1.html
+++ b/Artifact1.html
@@ -13,6 +13,7 @@
       <img src="finalrepetendcopy.png" alt="Funding Logo" style="height: 25px; width: 25px;">
     </a>
     <ul class="nav-links">
+      <li class="nav-item"><a href="LetterToTheReader">Letter to the Reader</a></li>
       <li class="nav-item"><a href="Artifact1">Artifact 1: Arguementative Essay</a></li>
       <li class="nav-item"><a href="Artifact2">Artifact 2: Editorial Article</a></li>
       <li class="nav-item"><a href="Artifact3">Artifact 3: Comic Strip</a></li>
