--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
       <p class="name">
         Kael Mercer
       </p>
+      <p class="teacher">
+        Mrs. DiGirolamo
+      </p>
+     <p class="date">
+       28 February 2022
+     </p>
    </div>
 </body>
 </html>
