--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         Mrs. DiGirolamo
       </p>
      <p class="date">
+       Honors English 2 <br>
        28 February 2022
      </p>
    </div>
