--- a/Endnotes.html
+++ b/Endnotes.html
@@ -27,7 +27,7 @@
   <center><img src="Repetend.png" alt="Logo" style="width: 300px; height: 300px;"></center>
   <center><p class="spaceabove">Endnotes</p></center>
   <br>
-  <div>
+  <div class="paragraphs">
     <ul style="font-family: arial;">
       <li>Artifact 1: Argumentative Essay - I decided to do this because I feel as though I am good at writing argumentative essays, 
         and feel as though they are a good outlet for the influence of an audience. For this artifact I used all six resources listed in the bibliography.
