--- a/Endnotes.html
+++ b/Endnotes.html
@@ -32,6 +32,7 @@
       <li>Artifact 1: Argumentative Essay - I decided to do this because I feel as though I am good at writing argumentative essays, 
         and feel as though they are a good outlet for the influence of an audience. For this artifact I used all six resources listed in the bibliography.
       </li>
+      <br>
       <li>Artifact 2: Editorial Article - I decided to do this because I like trying to persouade people through writing, and I because I needed a functional piece. This artifact serves both desires. 
       For this artifact I used four resouces: School Funding Inequities: A Statistical Analysis
      Examining the Adequacy of Funding for Capital Outlay in North Carolina
@@ -39,16 +40,20 @@
      Spending Inequality for Public Education", and "SCHOOL FUNDING: INEQUALITY in DISTRICT FUNDING AND THE
      DISPARATE IMPACT on URBAN AND MIGRANT SCHOOL CHILDREN."
       </li>
+      <br>
       <li>Artifact 3: Comic Strip - I decided to make this artifact because I like comics a lot. They are a coll medium to work with. 
         I didn't directly use any resources, but I gained heavy inspiration from "SCHOOL FUNDING: INEQUALITY in DISTRICT FUNDING AND THE
-     DISPARATE IMPACT on URBAN AND MIGRANT SCHOOL CHILDREN." This source explains, among other things, the problem with performance based funding, which ties in with the joke of this comic.</li>
+     DISPARATE IMPACT on URBAN AND MIGRANT SCHOOL CHILDREN." This source explains, among other things, the problem with performance based funding, which ties in with the joke of this comic.
+      </li>
+      <br>
       <li>Artifact 4: Editorial Cartoon - I decided to make this because, I think cartoons are a cool medium to deliver messages. I didn't directly use any resource, but I took
       inspiration from "SCHOOL FUNDING: INEQUALITY in DISTRICT FUNDING AND THE
      DISPARATE IMPACT on URBAN AND MIGRANT SCHOOL CHILDREN", "School Funding Inequities: A Statistical Analysis
      Examining the Adequacy of Funding for Capital Outlay in North Carolina
      Schools", and "Making America #1 in Education with Three Reforms." 
      These sources explained the faults of performance based funding and how increasing funding increases performances and lowers gaps between school.
-     The symbolism in this piece reflects that. </li>
+     The symbolism in this piece reflects that. 
+      </li>
     </ul>
   </div>
 </body>
