--- a/Endnotes.html
+++ b/Endnotes.html
@@ -46,7 +46,7 @@
      DISPARATE IMPACT on URBAN AND MIGRANT SCHOOL CHILDREN." This source explains, among other things, the problem with performance based funding, which ties in with the joke of this comic.
       </li>
       <br>
-      <li>Artifact 4: Editorial Cartoon - I decided to make this because, I think cartoons are a cool medium to deliver messages. I didn't directly use any resource, but I took
+      <li>Artifact 4: Editorial Cartoon - I decided to make this because I think cartoons are a cool medium to deliver messages. I didn't directly use any resource, but I took
       inspiration from "SCHOOL FUNDING: INEQUALITY in DISTRICT FUNDING AND THE
      DISPARATE IMPACT on URBAN AND MIGRANT SCHOOL CHILDREN", "School Funding Inequities: A Statistical Analysis
      Examining the Adequacy of Funding for Capital Outlay in North Carolina
