--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <li class="nav-item"><a href="Artifact3">Artifact 3: Comic Strip</a></li>
       <li class="nav-item"><a href="Artifact4">Artifact 4: Editorial Cartoon</a></li>
       <li class="nav-item"><a href="Bibliography">Bibliography</a></li>
+      <li class="nav-item"><a href="Endnotes">Endnotes</a></li>
       <li class="nav-item"><a href="Reflection">Reflection</a></li>
       <li class="nav-item"><a href="https://github.com/KaelM/MGP" target="_blank" rel="noopener noreferrer">Source Code</a></li>
     </ul>
