--- a/Endnotes.html
+++ b/Endnotes.html
@@ -41,7 +41,7 @@
      DISPARATE IMPACT on URBAN AND MIGRANT SCHOOL CHILDREN."
       </li>
       <br>
-      <li>Artifact 3: Comic Strip - I decided to make this artifact because I like comics a lot. They are a coll medium to work with. 
+      <li>Artifact 3: Comic Strip - I decided to make this artifact because I like comics a lot. They are a cool medium to work with. 
         I didn't directly use any resources, but I gained heavy inspiration from "SCHOOL FUNDING: INEQUALITY in DISTRICT FUNDING AND THE
      DISPARATE IMPACT on URBAN AND MIGRANT SCHOOL CHILDREN." This source explains, among other things, the problem with performance based funding, which ties in with the joke of this comic.
       </li>
