--- a/LetterToTheReader.html
+++ b/LetterToTheReader.html
@@ -14,7 +14,7 @@
     </a>
     <ul class="nav-links">
       <li class="nav-item"><a href="LetterToTheReader">Letter to the Reader</a></li>
-      <li class="nav-item"><a href="Artifact1">Artifact 1: Arguementative Essay</a></li>
+      <li class="nav-item"><a href="Artifact1">Artifact 1: Argumentative Essay</a></li>
       <li class="nav-item"><a href="Artifact2">Artifact 2: Editorial Article</a></li>
       <li class="nav-item"><a href="Artifact3">Artifact 3: Comic Strip</a></li>
       <li class="nav-item"><a href="Artifact4">Artifact 4: Editorial Cartoon</a></li>
